--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.4.4",
+    "axios": "^0.19.0",
+    "core-js": "^3.4.3",
+    "element-ui": "^2.4.5",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
+    "normalize.css": "^8.0.1",
     "vue": "^2.6.10",
+    "vue-google-signin-button-directive": "^1.0.3",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "wait-on": "^3.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -25,12 +32,15 @@
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "@vue/test-utils": "1.0.0-beta.29",
+    "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
     "chai": "^4.1.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.9.2",
+    "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
+    "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.10"
   }
 }
