--- a/package.json
+++ b/package.json
@@ -11,16 +11,32 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "chalk": "latest",
+    "copy-webpack-plugin": "latest",
     "core-js": "^3.4.3",
     "element-ui": "^2.4.5",
+    "eslint-friendly-formatter": "^4.0.1",
+    "html-webpack-plugin": "latest",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
+    "node-notifier": "^7.0.0",
     "normalize.css": "^8.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "ora": "latest",
+    "portfinder": "latest",
+    "quill": "^1.3.7",
+    "rimraf": "latest",
+    "semver": "latest",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "vue": "^2.6.10",
     "vue-google-signin-button-directive": "^1.0.3",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
-    "wait-on": "^3.3.0"
+    "wait-on": "^3.3.0",
+    "webpack": "latest",
+    "webpack-cli": "^3.3.11",
+    "webpack-merge": "latest"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -37,9 +53,12 @@
     "chai": "^4.1.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "node-sass": "^4.9.2",
     "sass": "^1.23.7",
     "sass-loader": "^8.0.0",
+    "shelljs": "^0.8.3",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.10"
   }
